develop/philips-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zen
  template:
    metadata:
      labels:
        app: zen
    spec:
      containers:
        - name: zen
          image: harbor.tanzu.be/library/zen@sha256:e8f525b6e51f297531a15578f0a18d256b509f30ea2095a64d2cab028b5d6fe6
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          resources:
            requests:
              memory: 768Mi
              cpu: 500m
            limits:
              memory: 768Mi
          ports:
            - containerPort: 8080
