develop/philips-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: philips-api
  labels:
    app: philips-api
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: philips-api
